# hw3-WGoogle

./: .gitignore  README.md  ai_documentation.txt  myst.yml  pyproject.toml
ligotools/: utils.py
ligotools.egg-info/: PKG-INFO
ligotools/tests/: test_readligo.py  test_utils.py
